# routes/api.php
@@ -24,9 +24,6 @@ Route::get('/', function(){
 
 Route::post('/login', [AuthController::class, 'login']);
 Route::post('/register', [AuthController::class, 'register']);
-Route::get('/tickets', function(){
-    return Ticket::all();
-});
 
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
